# clinical_trial_risk_v2_public

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml
back_end/: .dockerignore  .env.dev  .env.example  .env.example-docker  .gitignore  .secrets.example  .style.yapf  Makefile  README.md  alembic.ini  cli.sh  docker-compose-dev.yml  docker-compose.yml  ecosystem.config.js  hypercorn-docker.toml  hypercorn-prod.toml  hypercorn.toml  pyproject.toml  requirements.txt  run_q.sh
back_end/app/: celery_config.py  config.py  ct_core.py  ct_utils.py  database.py  database_default_data.py  helpers.py  log_config.py  mail.py  main.py  resources.py  security.py  task.py  types.py  utils.py
back_end/app/models/: __init__.py  server_response.py  vm.py
back_end/app/proto/: DocumentParser.proto
back_end/app/routers/: __init__.py  auth.py  document.py  metadata.py  subscription.py  user.py  weight_profile.py
back_end/app/schemas/: __init__.py  analysis_report_data.py  email_generator.py
back_end/app/services/: __init__.py  storage_provider.py  transform.py
back_end/cli/: __main__.py
back_end/clinical_trials_core/: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  generate.py  generate_requirements.py  increment_package_version.ipynb  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.sh  setup.cfg  setup.py  tox.ini
back_end/clinical_trials_core/tests/: __init__.py  abdullah_test.py  test_age.py  test_biobank.py  test_child.py  test_cohort_size.py  test_condition.py  test_consent.py  test_control_negative.py  test_country.py  test_design.py  test_document_type.py  test_drug.py  test_duration.py  test_effect_estimate.py  test_gender.py  test_healthy.py  test_human_challenge.py  test_interim.py  (+19 more)
back_end/docs/: DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  README.md
back_end/migrations/: env.py
back_end/schema/: base.sql  weight_schema.json  weight_schema_v2.json
back_end/scripts/: runtime_setup.sh
back_end/tests/: conftest.py  ct_core.py  test_password_regex.py
back_end/tika-grpc/: .gitignore  pom.xml
(+292 files in other folders)
